<resources>

    <string name="app_name">N-Password Manager</string>
    <string name="about">About</string>
    <string name="account_mail">Email address (Optional)</string>
    <string name="account_mdp">Password</string>
    <string name="account_name">Account name</string>
    <string name="account_notes">Notes (Optional)</string>
    <string name="account_type">Type of account</string>
    <string name="account_username">Username (Optional)</string>
    <string name="add">Add</string>
    <string name="add_mdp">Add a password</string>
    <string name="add_mdp_title">Add a password</string>
    <string name="add_to_current_data">Add to the existing data</string>
    <string name="any_file_msg">No backup files found! Be sure to copy it into the \'n-pm\' directory on your storage memory</string>
    <string name="any_file_title">No backup file found</string>
    <string name="any_mdp_msg">Click on the floating button to add one</string>
    <string name="any_mdp_stored">No password registered!</string>
    <string name="anything_to_save">Nothing to save</string>
    <string name="backup_in_progress">Backup in progress …</string>
    <string name="be_patient">Please wait …</string>
    <string name="cancel">Cancel</string>
    <string name="central_mail">Email address</string>
    <string name="central_mdp">Password</string>
    <string name="central_notes">Notes</string>
    <string name="central_username">Username</string>
    <string name="change_gen_settings">Please change the password generator settings</string>
    <string name="choose_file">Choose the file to import</string>
    <string name="confirm_new_mdp">Confirm the new password</string>
    <string name="confirmation">Confirmation</string>
    <string name="copyright" translatable="false"><![CDATA[&copy; 2019 Neteru Studio]]></string>
    <string name="crush_current_data">Overwrite existing data</string>
    <string name="deleted">Deleted!</string>
    <string name="deleting_but_summary">Enable to bring up the delete button</string>
    <string name="deleting_but_title">Delete button</string>
    <string name="edit_title">Edition</string>
    <string name="email">Email</string>
    <string name="enter">Enter</string>
    <string name="enter_your_mdp">Enter your password</string>
    <string name="error">Error!</string>
    <string name="error_occured">An error has occurred!</string>
    <string name="evaluate_us">Rate us</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="fail">Failure!</string>
    <string name="false_mdp">Wrong password</string>
    <string name="fill_the_fields">Fill in the required fields!</string>
    <string name="floatting_but_summary">Enable to bring up the password add button</string>
    <string name="floatting_but_title">Floating button</string>
    <string name="forget_mdp">Forgot your password ?</string>
    <string name="gen_but" translatable="false">-G-</string>
    <string name="general">General</string>
    <string name="google" translatable="false">Google</string>
    <string name="hide_mdp_summary">Enable to hide your passwords within the application</string>
    <string name="hide_mdp_title">Hide passwords</string>
    <string name="import_from_file">Import from a file</string>
    <string name="init">Initialization …</string>
    <string name="instagram" translatable="false">Instagram</string>
    <string name="instantly">Instantly</string>
    <string name="invalid_mail">Invalid email address!</string>
    <string name="loading">Loading …</string>
    <string name="loading_in_progress">Loading…</string>
    <string name="lock_app">Lock the application</string>
    <string name="lock_time_summary">Define the time period during which the application remains unlocked, this option must be handled with care to avoid exposing your passwords</string>
    <string name="lock_time_title">Locking delay time</string>
    <string name="lowercase">Lowercase letters</string>
    <string name="mail">Email address</string>
    <string name="mail_content">Password reset: \n</string>
    <string name="mail_modify_summary">Change the recovery email address</string>
    <string name="mail_modify_title">Recovery email address</string>
    <string name="mail_sending">Sending the email …</string>
    <string name="mail_subject" translatable="false">Account N_PasswordApp</string>
    <string name="mail_succes">Email sent successfully!</string>
    <string name="main_password">Enter a master password</string>
    <string name="mdp">Password</string>
    <string name="mdp_added">Password added!</string>
    <string name="mdp_gen_title">Password generator (-G-)</string>
    <string name="mdp_length">Password length</string>
    <string name="mdp_length_summary">Change the length of the generated passwords</string>
    <string name="mdp_portal_summary">Change the master password</string>
    <string name="mdp_portal_title">Master password</string>
    <string name="new_mdp">New Password</string>
    <string name="next">Next</string>
    <string name="no_conform_mdp">Password not conform!</string>
    <string name="numbers">Numbers</string>
    <string name="numbers_summary">Include capital letters in the generated password (0 – 9)</string>
    <string name="ok">OK</string>
    <string name="old_mdp">Old password</string>
    <string name="old_mdp_false">Old password wrong!</string>
    <string name="onehour">1 hour</string>
    <string name="others">Others</string>
    <string name="other">Other</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="recommand_app">Share the application</string>
    <string name="recovery_mail">Recovery Email</string>
    <string name="reinit_in_progress">Reset password …</string>
    <string name="reinit_instruction">Click to reset the password and send it to your email address</string>
    <string name="reinit_msg">Confirm password reset</string>
    <string name="reinit_title">Reset password</string>
    <string name="restoration_done">Restoration done!</string>
    <string name="restoration_msg">The data contained in the file \'%1$s\' will be restored</string>
    <string name="restoration_title">Restoration</string>
    <string name="restore_option_summary">Define what to do when restoring an old backup</string>
    <string name="restore_option_title">Restoration options</string>
    <string name="save_file">Save to a file</string>
    <string name="saved">Saved!</string>
    <string name="saved_in_npm">Saved successfully in /n-pm/</string>
    <string name="search_title">Search</string>
    <string name="secure_notif_summary">Notify me in case of unsuccessful attempts to access my passwords</string>
    <string name="secure_notif_title">Security notifications</string>
    <string name="security_notif_msg">%1$d attempt(s) to access your passwords</string>
    <string name="settings_title">Settings</string>
    <string name="share_app">Share the app</string>
    <string name="share_app_txt">Centralize your accounts and easily manage your passwords:\n\n https://play.google.com/store/apps/details?id=</string>
    <string name="short_mdp">Password too short!</string>
    <string name="success">Success!</string>
    <string name="symbols">Symbols</string>
    <string name="symbols_summary">Include symbols in the generated password</string>
    <string name="telegram" translatable="false">Telegram</string>
    <string name="to_restore">Restore</string>
    <string name="to_save">Save</string>
    <string name="twitter" translatable="false">Twitter</string>
    <string name="undo">UNDO</string>
    <string name="uppercase">Capital letters</string>
    <string name="uppercase_summary">Include capital letters in the generated password (A - Z)</string>
    <string name="version_num" translatable="false">v1.1.3</string>
    <string name="view">View</string>
    <string name="whatsapp" translatable="false">WhatsApp</string>
    <string name="lowercase_summary">Include lowercase letters in the generated password (a - z)</string>
    <string name="added_on">Added on %1$s</string>
    <string name="deletion_title">Deletion</string>
    <string name="are_u_sure_to_delete">Are you sure you want to delete \'%1$s\'?</string>
    <string name="copied">Copied!</string>
    <string name="deletion_in_progress">Deletion …</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="error_connection">Oups! connection failure</string>
    <string name="donate_title">Donate</string>
    <string name="donations__description">Do you think this application is useful?\nSupport its development by sending a donation to its developer</string>
    <string name="donation_item">Donation</string>
    <string name="donations_alert_dialog_no_browser">No browser was found!</string>
    <string name="donations_alert_dialog_title">An error has occurred</string>
    <string name="swiping_title">Swiping</string>
    <string name="swiping_summary">Activate to perform actions by swiping left and right</string>
    <string name="linkedin" translatable="false">Linkedin</string>
    <string name="youtube" translatable="false">Youtube</string>
    <string name="info">Info</string>
    <string name="privacy_policy">Privacy Policy</string>

</resources>
