<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:icon="@mipmap/ic_add_white_24dp"
        android:title="@string/add_mdp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_lock"
        android:orderInCategory="100"
        android:icon="@mipmap/ic_https_white_24dp"
        android:title="@string/lock_app"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_import"
        android:orderInCategory="100"
        android:title="@string/import_from_file"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/save_file"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/recommand_app"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_evaluate"
        android:orderInCategory="100"
        android:title="@string/evaluate_us"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/ic_search_white_24dp"
        android:title="@string/search_title"
        app:showAsAction="always" />

</menu>