<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/relative"
    tools:context=".activities.prime.firstlaunch.FirstlaunchOneActivity">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/topIcon"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center"
            android:src="@mipmap/n_pass_launcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.neteru.n_pass.classes.Typewriter
            android:id="@+id/order"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.cardview.widget.CardView
            app:cardElevation="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editor_1"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPassword"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/mdp"
                tools:ignore="Autofill" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            app:cardElevation="0dp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editor_2"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPassword"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/confirmation"
                tools:ignore="Autofill" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/next"
            android:background="@drawable/blue_button_bg_stroke"
            android:textColor="@color/colorPrimary"
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
